modification icone envoi validation

--- a/templates/FrontOffice/Courrier/Validation/validation_courrier.html.twig
+++ b/templates/FrontOffice/Courrier/Validation/validation_courrier.html.twig
@@ -50,7 +50,7 @@
                             <td>
                                 <a href="{{ path('valide_request',{id:validation_courrier.id}) }}"
                                    class="btn btn-sm bg-blue-darken text-white {{ validation_courrier.isValid == 1 ? "" : "d-none" }}">
-                                    <i class="fas fa-envelope"></i>
+                                    <i class="fas fa-paper-plane"></i>
                                 </a>
                                 <a href="{{ path('courrier_request_show',{id:validation_courrier.id})}}"
                                    class="btn btn-sm btn-dark">
