--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,7 +1,6 @@
 /*body{
     background-color: #f2f2f2;    
 }*/
-
 .bg-white{
     background-color: #fff;
 }
@@ -30,6 +29,16 @@ thead{
     border-radius: 50% !important;
     width: 30px !important;
     height: 30px !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    font-size: 14px !important;
+}
+
+.border-radius-100{
+    border-radius: 50% !important;
+    width: 100px !important;
+    height: 100px !important;
     display: flex !important;
     align-items: center !important;
     justify-content: center !important;
