--- a/templates/BackOffice/Direction/index.html.twig
+++ b/templates/BackOffice/Direction/index.html.twig
@@ -42,11 +42,11 @@
                             <td>{{ direction.descrDir }}</td>
                             <td>
                                 <a href="{{ path('direction_edit',{id:direction.id})}}">
-                                    <i class="fas fa-edit"></i>
+                                    <i class="fas fa-edit text-success"></i>
                                 </a>
                                 <a href="{{ path('direction_delete',{id:direction.id})}}"
                                    onclick="return confirm('Est-ce que vous voulez vraiment supprimer cet element');">
-                                    <i class="fas fa-trash"></i>
+                                    <i class="fas fa-trash text-danger"></i>
                                 </a>
                             </td>
                         </tr>
