--- a/templates/BackOffice/Role/index.html.twig
+++ b/templates/BackOffice/Role/index.html.twig
@@ -41,11 +41,11 @@
                             <td>{{ titre|replace({'ROLE_':''})|title }}</td>
                             <td class="{{ (titre == 'ROLE_ADMIN' or titre == 'ROLE_DIRECTEUR') ? 'd-none' : '' }}">
                                 <a href="{{ path('admin_role_edit',{id:role.id}) }}">
-                                    <i class="fas fa-edit"></i>
+                                    <i class="fas fa-edit text-success"></i>
                                 </a>
                                 <a href="{{ path('admin_role_delete',{id:role.id}) }}"
                                    onclick="return confirm('Est-ce que vous voulez vraiment supprimer cet element');">
-                                    <i class="fas fa-trash"></i>
+                                    <i class="fas fa-trash text-danger"></i>
                                 </a>
                             </td>
                         </tr>
