--- a/templates/BackOffice/User/index.html.twig
+++ b/templates/BackOffice/User/index.html.twig
@@ -55,11 +55,11 @@
                             </td>
                             <td>
                                 <a href="{{ path('admin_user_edit',{id:user.id}) }}">
-                                    <i class="fas fa-edit"></i>
+                                    <i class="fas fa-edit text-success"></i>
                                 </a>
                                 <a href="{{ path('admin_user_delete',{id:user.id}) }}"
                                    onclick="return confirm('Est-ce que vous voulez vraiment supprimer cet element');">
-                                    <i class="fas fa-trash"></i>
+                                    <i class="fas fa-trash text-danger"></i>
                                 </a>
                             </td>
                         </tr>
