--- a/templates/BackOffice/Courrier/index.html.twig
+++ b/templates/BackOffice/Courrier/index.html.twig
@@ -34,11 +34,21 @@
                     </thead>
                     <tbody>    
                        {% for courrier in courriers %}
+                        {% set priorite = courrier.priorite %}
                         <tr>
                             <td>{{ courrier.sender.username }}</td>
                             <td>{{ courrier.recipient.username }}</td>
                             <td>{{ courrier.objetCourrier }}</td>
                             <td>{{ courrier.dateEnvoie|date('d-m-Y') }}</td>
+                            <td>
+                                {% if priorite == 1 %}
+                                    <span class="badge badge-success">Normale</span>
+                                {% elseif priorite == 2 %}
+                                    <span class="badge badge-warning">Urgent</span>
+                                {% elseif priorite == 3 %}
+                                    <span class="badge badge-danger">Très urgent</span>
+                                {% endif %}
+                            </td>
                         </tr>
                        {% endfor %}
                     </tbody>
