--- a/templates/FrontOffice/courrier_classer/index.html.twig
+++ b/templates/FrontOffice/courrier_classer/index.html.twig
@@ -40,6 +40,12 @@
                             <tr>
                                 <td>{{ courrier_classer.courrier.reference }}</td>
                                 <td>{{ courrier_classer.typDos.libelleTypeDossier }}</td>
+                                <td class="d-flex align-items-center">
+                                        <a href="#"
+                                        onclick="return confirm('Est-ce que vous voulez vraiment supprimer cet element');">
+                                         <i class="fas fa-trash text-danger"></i>
+                                     </a>
+                                </td>
                             </tr>
                         {% else %}
                             <tr align="center">
