voir le courrier valider et archiver

--- a/templates/BackOffice/Courrier/index.html.twig
+++ b/templates/BackOffice/Courrier/index.html.twig
@@ -49,6 +49,15 @@
                                     <span class="badge badge-danger">Très urgent</span>
                                 {% endif %}
                             </td>
+                            <td>
+                                    <a href="#" class="px-1">
+                                            <i class="fas fa-eye"></i>
+                                        </a>
+                                        <a href="#"
+                                           onclick="return confirm('Est-ce que vous voulez vraiment supprimer cet element');">
+                                            <i class="fas fa-trash text-danger"></i>
+                                        </a>
+                            </td>
                         </tr>
                        {% endfor %}
                     </tbody>
