--- a/templates/BackOffice/TypeCourrier/index.html.twig
+++ b/templates/BackOffice/TypeCourrier/index.html.twig
@@ -40,12 +40,12 @@
                             <td>{{ type_courrier.LibelleTypeCourrier }}</td>
                             <td>
                                 <a href="{{ path('admin_type_courrier_edit', {'id': type_courrier.id}) }}">
-                                    <i class="fas fa-edit"></i>
+                                    <i class="fas fa-edit text-success"></i>
                                 </a>
                                 <a href="{{ path('admin_type_courrier_delete', {'id': type_courrier.id}) }}"
                                    onclick="return confirm('Est-ce que vous voulez vraiment supprimer cet element');"
                                 >
-                                    <i class="fas fa-trash"></i>
+                                    <i class="fas fa-trash text-danger"></i>
                                 </a>
                             </td>
                         </tr>
