rectif show courrier classe

--- a/templates/FrontOffice/Courrier/Courrier_classer/index.html.twig
+++ b/templates/FrontOffice/Courrier/Courrier_classer/index.html.twig
@@ -41,7 +41,7 @@
                                 <td>{{ courrier_classer.courrier.reference }}</td>
                                 <td>{{ courrier_classer.typDos.libelleTypeDossier }}</td>
                                 <td>
-                                        <a href="{{ url('show_courrier_classed',{id:courrier_classer.courrier.id}) }}">
+                                        <a href="{{ url('show_courrier_classed',{id:courrier_classer.id}) }}">
                                                 <i class="fas fa-eye"></i>
                                         </a>
                                         <a href="#"
