--- a/templates/BackOffice/Courrier/index.html.twig
+++ b/templates/BackOffice/Courrier/index.html.twig
@@ -20,8 +20,8 @@
                         </div><!--end col-->
                     </div><!--end row-->
                 </div>
-
-                <table class="table table-striped">
+                {% include 'partials/research.html.twig' %}
+                <table class="table table-striped" id="table">
                     <thead>
                     <tr>
                         <th>De</th>
