--- a/templates/BackOffice/TypeCourrier/index.html.twig
+++ b/templates/BackOffice/TypeCourrier/index.html.twig
@@ -26,8 +26,8 @@
                         </div>
                     </div><!--end row-->
                 </div>
-
-                <table class="table table-striped">
+                {% include 'partials/research.html.twig' %}
+                <table class="table table-striped" id="table">
                     <thead>
                         <tr>
                             <th>Type de courrier</th>
