--- a/templates/FrontOffice/Courrier/Validation/validation_courrier.html.twig
+++ b/templates/FrontOffice/Courrier/Validation/validation_courrier.html.twig
@@ -26,7 +26,8 @@
                         </div>
                     </div><!--end row-->
                 </div>
-                <table class="table table-striped">
+                {% include 'partials/research.html.twig' %}
+                <table class="table table-striped" id="table">
                     <thead>
                     <tr>
                         <th>Recepteur</th>
