--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -24,6 +24,7 @@
             <link type="text/css" rel="stylesheet" href="{{ asset('bootstrap/login/vendor/daterangepicker/daterangepicker.css') }}">
             <link type="text/css" rel="stylesheet" href="{{ asset('bootstrap/login/css/util.css') }}">
             <link type="text/css" rel="stylesheet" href="{{ asset('bootstrap/login/css/main.css') }}">
+            <link type="text/css" rel="stylesheet" href="{{ asset('dataTable/css/datatables.min.css') }}">
         {% endblock %}
     </head>
     <body class="dark-sidenav">
@@ -40,6 +41,7 @@
             <!-- jQuery  -->
             <script src="{{ asset('assets/js/jquery.min.js') }}"></script>
             <script src="{{ asset('assets/js/bootstrap.bundle.min.js') }}"></script>
+            <script src="{{ asset('dataTable/js/datatables.min.js') }}"></script>
             <script src="{{ asset('assets/js/metismenu.min.js') }}"></script>
             <script src="{{ asset('assets/js/waves.js') }}"></script>
             <script src="{{ asset('assets/js/feather.min.js') }}"></script>
@@ -48,6 +50,7 @@
             <script src="{{ asset('assets/pages/jquery.analytics_dashboard.init.js') }}"></script>
             <!-- App js -->
             <script src="{{ asset('assets/js/app.js') }}"></script>
+            <script src="{{ asset('js/datatable.js') }}"></script>
         {% endblock %}
     </body>
 </html>
