--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -133,3 +133,45 @@ thead tr th{
     align-items: center;
 }
 /* Fin Card Statistique */
+
+.research-datatable{
+    border: 1px solid #303e67 !important;
+    border-radius: 50px;
+    padding: 0.5% 0 !important;
+}
+
+.margin-left-right{
+    margin: 0 20rem !important;
+    margin-bottom: 1rem !important;
+}
+
+.input-research{
+    padding: 0 5%;
+    flex: 1;
+    display: flex;
+    justify-content: start;
+}
+
+.arrow-left,.arrow-right{
+    font-size: 25px;
+    color: #0c213a !important;
+}
+
+.dataTables_wrapper #table_filter{
+    display: none;
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button.current
+{
+    background: #fff !important;
+    color: #0c213a !important;
+    border-radius: 50px;
+    height: 30px;
+    border: 1px solid #0c213a !important;
+    padding: 4px 6px;
+}
+
+
+
+
+
