--- a/templates/FrontOffice/Courrier/Partage/partage.html.twig
+++ b/templates/FrontOffice/Courrier/Partage/partage.html.twig
@@ -20,7 +20,8 @@
                         </div><!--end col-->
                     </div><!--end row-->
                 </div>
-                <table class="table table-striped">
+                {% include 'partials/research.html.twig' %}
+                <table class="table table-striped" id="table">
                     <thead>
                     <tr>
                         <th>Recepteur</th>
