--- a/templates/BackOffice/Courrier/index.html.twig
+++ b/templates/BackOffice/Courrier/index.html.twig
@@ -26,6 +26,7 @@
                     <tr>
                         <th>De</th>
                         <th>A</th>
+                        <th>Réference</th>
                         <th>Sujet</th>
                         <th>Date</th>
                         <th>Priorité </th>
@@ -38,6 +39,7 @@
                         <tr>
                             <td>{{ courrier.sender.nom }}</td>
                             <td>{{ courrier.recipient.nom }}</td>
+                            <td>{{ courrier.reference }}</td>
                             <td>{{ courrier.objetCourrier }}</td>
                             <td>{{ courrier.dateEnvoie|date('d-m-Y') }}</td>
                             <td>
